# taef-clion-plugin

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
classic/: build.gradle.kts
classic/src/main/kotlin/com/github/eviltak/taef/: TaefClassicLanguageSupport.kt
classic/src/test/kotlin/com/github/eviltak/taef/: TaefClassicEngineTest.kt
docs/: architecture.md  clion-test-plugin-api.md  taef-feature-support.md
nova/: build.gradle.kts
nova/src/main/kotlin/com/github/eviltak/taef/: TaefNovaLanguageSupport.kt  TaefNovaLineMarkerContributor.kt
nova/src/test/kotlin/com/github/eviltak/taef/: TaefNovaIntegrationTest.kt  TaefNovaLineMarkerContributorTest.kt
shared/: build.gradle.kts
shared/src/main/kotlin/com/github/eviltak/taef/: TaefCommandLineBuilder.kt  TaefConfigurationType.kt  TaefConsoleFilterProvider.kt  TaefLanguageSupport.kt  TaefOutputToGeneralTestEventsConverter.kt  TaefRunConfiguration.kt  TaefSettingsEditor.kt  TaefTargetUtil.kt  TaefTestCommandLineState.kt  TaefTestConstants.kt
shared/src/main/kotlin/com/github/eviltak/taef/output/: TaefOutputLineClassifier.kt  TaefTestEvent.kt
shared/src/test/kotlin/com/github/eviltak/taef/: ConverterTestHarness.kt  TaefConfigurationTest.kt  TaefSMRunnerWiringTest.kt  TaefSourceLinkPatternTest.kt  TaefTestConstantsTest.kt  TaefTestTreeTest.kt  TaefTestUtil.kt
src/main/kotlin/com/github/eviltak/taef/: TaefBeforeRunTaskProvider.kt  TaefCommandLineState.kt  TaefConfigurationType.kt  TaefExecutionTargetProvider.kt  TaefLauncher.kt  TaefOutputParser.kt  TaefOutputToGeneralTestEventsConverter.kt  TaefRunConfiguration.kt  TaefRunConfigurationOptions.kt  TaefRunConfigurationProducer.kt  TaefSettingsEditor.kt  TaefTestConsoleProperties.kt  TaefTestConstants.kt  TaefTestFramework.kt  TaefTestFrameworkDetector.kt  TaefTestLocator.kt  TaefTestRunConfigurationData.kt
src/main/kotlin/com/github/eviltak/taef/output/: TaefStreamParser.kt
src/test/kotlin/com/github/eviltak/taef/: ConverterTestHarness.kt  SampleProjectConstants.kt  TaefCMakeIntegrationTest.kt  TaefCommandLineBuilderTest.kt  TaefConfigurationTest.kt  TaefExecutionIntegrationTest.kt  TaefExecutionTest.kt  TaefExtensionPointTest.kt  TaefOutputParserTest.kt  TaefSMRunnerTest.kt  TaefSMRunnerWiringTest.kt  TaefTestConstantsTest.kt  TaefTestFrameworkTest.kt  TaefTestUtil.kt
src/test/kotlin/com/github/eviltak/taef/output/: TaefOutputLineClassifierTest.kt  TaefStreamParserTest.kt
testData/mockTe/: MockTe.Tests.ps1  MockTe.psm1  mock_te.cmd  mock_te.ps1
testData/mockTe/fixtures/: all-tests.txt  list-tests.txt
testData/sampleProject/: CMakeLists.txt
testData/sampleProject/src/: NotTaefTests.cpp  SampleApp.cpp  SampleTests.cpp  StubTests.cpp  TestData.xml  WexTestClass.h
testData/sampleProject/src/stubs/: WexTestClass.h
testData/sampleProject/src/taef/: WexTestClass.h
testUtil/: build.gradle.kts
